--- a/components/EditTopping.module.css
+++ b/components/EditTopping.module.css
@@ -30,3 +30,13 @@
   filter: var(--svg-filter);
 }
 
+.error {
+  margin-top: 0;
+  color: red;
+  display: flex;
+  margin: calc(var(--gap)/2) 0;
+  font-size: 1rem;
+}
+.error > span:nth-of-type(2) {
+  margin-left: calc(var(--gap)/2);
+}
