--- a/components/ListItem.module.css
+++ b/components/ListItem.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   width:100%;
+    margin-bottom: calc(var(--gap)/2);
 }
 
 .container > button:first-of-type {
