--- a/components/EditTopping.module.css
+++ b/components/EditTopping.module.css
@@ -2,8 +2,8 @@
   display: flex;
   width:100%;
 }
-.container > button {
-  margin:auto;
+.container > input {
+  width: calc(320px - var(--gap)*2 - var(--gap) - (36px * 2 + 8px));
 }
 
 .actionBtn {
@@ -14,7 +14,9 @@
   justify-content: center;
   align-items: center;
   padding: 0.25rem 0.25rem;
-  margin-left: calc(var(--gap)/2);
+/*  margin-left: calc(var(--gap)/2);*/
+  margin-left: auto;
+  margin-right: calc((36px * 2 + var(--gap)/2)/2 - 18px); 
 }
 
 .actionBtn > img {
