--- a/components/loading-modal/loading-modal.module.css
+++ b/components/loading-modal/loading-modal.module.css
@@ -1,7 +1,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   background-size: contain;
   background-repeat: no-repeat;
   padding: var(--gap);
@@ -16,8 +16,8 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
-  background: rgba(0,0,0,1);
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 1);
   border-radius: 0.75rem;
   box-shadow: var(--box-shadow);
   padding: var(--gap);
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-/*  min-width: 304px;*/
+  /*  min-width: 304px;*/
   width: fit-content;
   max-width: 500px;
 }
