--- a/components/modal/modal.module.css
+++ b/components/modal/modal.module.css
@@ -1,7 +1,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
   background-size: contain;
   background-repeat: no-repeat;
   padding: var(--gap);
@@ -13,7 +13,7 @@
 }
 
 .card {
-  background: rgba(0,0,0,1);
+  background: rgba(0, 0, 0, 1);
   border-radius: 0.75rem;
   box-shadow: var(--box-shadow);
   padding: var(--gap);
@@ -34,7 +34,6 @@
   align-items: center;
   padding: 0.25rem 0.25rem;
   margin-left: auto;
-
 }
 .card > button:last-of-type {
   width: fit-content;
@@ -66,7 +65,7 @@
 }
 
 .card > form {
-  width:fit-content;
+  width: fit-content;
   margin: auto;
   text-align: left;
 }
@@ -76,7 +75,7 @@
   margin: auto;
 }
 .nameInput {
-  margin-top: calc(var(--gap)/2);
+  margin-top: calc(var(--gap) / 2);
   margin-bottom: calc(var(--gap));
 }
 
@@ -89,26 +88,26 @@
 }
 .card > form > fieldset > legend {
   text-align: center;
-  margin-bottom: calc(var(--gap)/2);
+  margin-bottom: calc(var(--gap) / 2);
 }
 
 .selection {
   margin-left: 1rem;
-  margin-bottom: calc(var(--gap)/2);
-  display:flex;
+  margin-bottom: calc(var(--gap) / 2);
+  display: flex;
   align-items: center;
 }
 
 .selection > label {
   cursor: pointer;
   width: 100%;
-  display:flex;
-  padding: calc(var(--gap)/4) 0;
-  padding-bottom: calc(var(--gap)/4);
+  display: flex;
+  padding: calc(var(--gap) / 4) 0;
+  padding-bottom: calc(var(--gap) / 4);
   transition: var(--transition);
 }
 .selection > label:hover {
-  background: rgba(255,255,255,0.05);
+  background: rgba(255, 255, 255, 0.05);
 }
 
 .selection > label > input {
@@ -116,7 +115,7 @@
   margin: 0;
 }
 .selection > label > span {
-  padding-left: calc(var(--gap)/2);
+  padding-left: calc(var(--gap) / 2);
 }
 
 .error {
@@ -127,5 +126,5 @@
   font-size: 1rem;
 }
 .error > span:nth-of-type(2) {
-  margin-left: calc(var(--gap)/2);
+  margin-left: calc(var(--gap) / 2);
 }
